@@ -8,7 +8,7 @@ $color-edit: #75ad0a !default;
 
 $color-default: #2980b9 !default;
 $color-success: #21ba45 !default;
-$color-warning: #eab05e !default;
+$color-warning: #eab055 !default;
 $color-danger: #db2828 !default;
 
 $color-white: #fff !default;
